--- a/app/views/auth/register/index.html.erb
+++ b/app/views/auth/register/index.html.erb
@@ -1,2 +1,35 @@
 <h1>Auth::Register#index</h1>
 <p>Find me in app/views/auth/register/index.html.erb</p>
+
+<style>
+  input {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .text-error {
+    color: red;
+  }
+</style>
+
+<% if flash[:error] %>
+<%= content_tag :p, flash[:error], class: "text-error" %>
+<% end %>
+
+
+<%= form_with method:"post", url: auth_register_process_path, model: @user do |form|  %>
+
+<%= form.label :name  %>
+<%= form.text_field :name, placeholder: "insert your name" %>
+
+<%= form.label :email %>
+<%= form.email_field :email, placeholder: "insert your email"  %>
+
+<%= form.label :password %>
+<%= form.password_field :password, placeholder: "insert your password"  %>
+
+<%= form.label :password_confirmation %>
+<%= form.password_field :password_confirmation, placeholder: "password confirmation"  %>
+
+<%= form.submit "Create account" %>
+
+<% end %>
